[tool.poetry]
name = "pong"
version = "0.1.0"
description = ""
authors = ["Kieran Porter <kieran.porter@snap40.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^2.0.1"
pygame-menu = "^3.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
